--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ImFitPlus">
         <activity
+            android:name=".GastoCaloricoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ResultadoIMCActivity"
             android:exported="false" />
         <activity
